# otters

./: .gitignore  .v0.rc  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  EPICS.md  LICENSE  Makefile  README.md  codecov.yml  deny.toml  quench.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  coverage.yml  release.yml  security.yml
checks/: lint.sh
checks/coverage/: gap-analysis.sh  measure.sh  report.sh
checks/quality/: benchmark.sh  compare.sh  evaluate.sh
crates/adapters/: Cargo.toml
crates/adapters/src/: lib.rs  traced.rs  traced_tests.rs
crates/adapters/src/notify/: fake.rs  fake_tests.rs  mod.rs  noop.rs
crates/adapters/src/repo/: fake.rs  fake_tests.rs  git.rs  mod.rs  noop.rs
crates/adapters/src/session/: fake.rs  fake_tests.rs  mod.rs  noop.rs  tmux.rs
crates/cli/: CLAUDE.md  Cargo.toml
crates/cli/src/: adapters.rs  client.rs  client_tests.rs  completions.rs  error.rs  main.rs  output.rs
crates/cli/src/commands/: daemon.rs  done.rs  emit.rs  mod.rs  pipeline.rs  queue.rs  run.rs  session.rs  signal.rs  worker.rs  workspace.rs
crates/cli/tests/: concurrent_pipelines.rs  daemon_polling.rs  failure_injection.rs  pipeline_lifecycle.rs  session_management.rs  signal_handling.rs  workspace_management.rs
crates/cli/tests/common/: claudeless.rs  mod.rs  tmux.rs
crates/cli/tests/scenarios/: auth-failure.toml  auto-done.toml  malformed.toml  network-failure.toml  rate-limit.toml  simple.toml  timeout.toml  transient-failure.toml  wal-corruption.toml
crates/core/: CLAUDE.md  Cargo.toml
crates/core/src/: clock.rs  clock_tests.rs  effect.rs  effect_tests.rs  event.rs  event_tests.rs  id.rs  id_tests.rs  lib.rs  limits.rs  operation.rs  operation_tests.rs  pipeline.rs  pipeline_tests.rs  queue.rs  queue_tests.rs  session.rs  session_tests.rs  task.rs  task_tests.rs  traced.rs  workspace.rs  workspace_tests.rs
crates/core/src/adapters/: CLAUDE.md  claude.rs  fake.rs  fake_tests.rs  git.rs  git_tests.rs  mod.rs  notify.rs  notify_tests.rs  real.rs  real_tests.rs  tmux.rs  tmux_tests.rs  traits.rs  wk.rs
crates/core/src/config/: mod.rs  notify.rs  notify_tests.rs
crates/core/src/coordination/: CLAUDE.md  guard.rs  guard_tests.rs  lock.rs  lock_tests.rs  maintenance.rs  maintenance_tests.rs  manager.rs  manager_tests.rs  mod.rs  phase_guard.rs  phase_guard_tests.rs  semaphore.rs  semaphore_tests.rs  storage.rs  storage_tests.rs
crates/core/src/engine/: CLAUDE.md  engine.rs  executor.rs  mod.rs  recovery.rs  recovery_tests.rs  runtime.rs  runtime_tests.rs  scheduler.rs  scheduler_tests.rs  signals.rs  worker.rs  worker_tests.rs
crates/core/src/events/: CLAUDE.md  bus.rs  bus_tests.rs  log.rs  log_tests.rs  mod.rs  subscription.rs  subscription_tests.rs  tests.rs
crates/core/src/pipeline/: mod.rs  phase.rs  state.rs  state_tests.rs
crates/core/src/pipelines/: CLAUDE.md  bugfix.rs  build.rs  dynamic.rs  dynamic_tests.rs  mod.rs
crates/core/src/runbook/: CLAUDE.md  input.rs  input_tests.rs  loader.rs  loader_tests.rs  mod.rs  parser.rs  parser_tests.rs  template.rs  template_tests.rs  types.rs  validator.rs  validator_tests.rs
crates/core/src/runbooks/: janitor.toml  triager.toml  watchdog.toml
crates/core/src/scheduling/: CLAUDE.md  action.rs  action_tests.rs  bridge.rs  bridge_tests.rs  cleanup.rs  cleanup_tests.rs  controller.rs  controller_tests.rs  cron.rs  cron_tests.rs  executor.rs  executor_tests.rs  fetch.rs  manager.rs  manager_tests.rs  mod.rs  resource.rs  resource_tests.rs  scanner.rs  scanner_tests.rs  source.rs  source_tests.rs  watcher.rs  watcher_tests.rs
crates/core/src/storage/: CLAUDE.md  json.rs  mod.rs
crates/core/src/storage/wal/: entry.rs  entry_tests.rs  mod.rs  operation.rs  operation_tests.rs  reader.rs  reader_tests.rs  snapshot.rs  snapshot_tests.rs  state.rs  state_tests.rs  store.rs  store_tests.rs  writer.rs  writer_tests.rs
crates/core/src/strategy/: CLAUDE.md  mod.rs  strategy_tests.rs
crates/core/src/worker/: mod.rs  state.rs  state_tests.rs
crates/core/tests/: engine_integration.rs  runbook_pipeline.rs  runbook_validation.rs  strategy_integration.rs
crates/daemon/: Cargo.toml
crates/engine/: Cargo.toml
crates/engine/src/: error.rs  events.rs  executor.rs  executor_tests.rs  lib.rs  monitor.rs  monitor_tests.rs  phases.rs  runtime.rs  runtime_tests.rs  scheduler.rs  scheduler_tests.rs  session_log.rs  session_log_tests.rs  spawn.rs  workspace.rs  workspace_tests.rs
crates/runbook/: Cargo.toml
crates/runbook/src/: agent.rs  agent_tests.rs  command.rs  command_tests.rs  lib.rs  parser.rs  parser_tests.rs  pipeline.rs  pipeline_tests.rs  template.rs  template_tests.rs  worker.rs  worker_tests.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  state.rs  state_tests.rs  wal.rs  wal_tests.rs
docs/: CLAUDE.md  TEST_HAIKU_RUNBOOK.md
docs/01-concepts/: EXECUTION.md  RUNBOOKS.md
docs/02-integrations/: CLAUDE_CODE.md  ISSUE_TRACKING.md  STORAGE.md
docs/03-interface/: CLI.md  EVENTS.md  MACOS.md
docs/04-architecture/: 00-overview.md  (+15 more)
plans/: epic-01-mvp.md  epic-02-state.md  epic-03-engine.md  epic-04-events.md  epic-05b-closing-gap-part2-integration.md  epic-05b-closing-gap-part4-haiku-runbook.md  epic-05c-code-quality.md  start.sh  uat-02-agents.md  uat-02-bugs.md  use-dot-oj-state.md
runbooks/: build.toml  janitor.toml  triager.toml  watchdog.toml
scripts/: coverage  init-worktree  install  license  migrate-from-bash.sh  policy  profile.sh  smoke-test.sh  spec
tests/: specs.rs
(+85 files in other folders)
