[workspace]
resolver = "2"
members = ["crates/cli", "crates/core"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[profile.release]
strip = true
lto = true
panic = "abort"
