[package]
name = "oj"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
oj-core = { path = "../core", version = "0.1.0" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4.5"
ctrlc = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
