[package]
name = "oj"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
oj-core = { path = "../core", version = "0.1.0" }
oj-daemon = { path = "../daemon", version = "0.1.0" }
oj-runbook = { path = "../runbook", version = "0.1.0" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
