[package]
name = "oj-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
humantime-serde = "1"
toml = "0.9"
minijinja = "2.0"
crc32fast = "1.3"
ureq = "3"
humantime = "2"

[dev-dependencies]
proptest = "1"
yare = "3"
tempfile = "3"

# cargo-machete false positive: humantime-serde is used via #[serde(with = "humantime_serde")]
# attribute in semaphore.rs and lock.rs
[package.metadata.cargo-machete]
ignored = ["humantime-serde"]
