[package]
name = "oj-runbook"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
oj-core = { path = "../core", version = "0.1.0" }
regex = "1"
serde.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
